--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,20 @@
+# pokimages/docker-compose.yml
 version: '3.8'
 services:
   backend:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "8081:8080"
+      - "8081:8081"  # Port hôte 8081 -> Port conteneur 8081
     depends_on:
       - db
   frontend:
-    build: ./src/main/frontend
+    build:
+      context: ./src/main/frontend
+      dockerfile: Dockerfile
     ports:
-      - "8082:80"
+      - "8082:80"  # Port hôte 8082 -> Port conteneur 80 (Nginx)
   db:
     image: postgres:15
     environment:
