--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=pokimages
-server.port=8082
-spring.datasource.url=jdbc:postgresql://localhost:5432/pokimages
+server.port=8081
+spring.datasource.url=jdbc:postgresql://db:5432/pokimages
 spring.datasource.username=ia
 spring.datasource.password=foufafou
 spring.jpa.hibernate.ddl-auto=update
