--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,37 @@
-# pokimages/docker-compose.yml
-version: '3.8'
+version: '3'
 services:
   backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
-      - "8081:8081"  # Port hôte 8081 -> Port conteneur 8081
+      - "8081:8081"
     depends_on:
-      - db
-  frontend:
-    build:
-      context: ./src/main/frontend
-      dockerfile: Dockerfile
-    ports:
-      - "8082:80"  # Port hôte 8082 -> Port conteneur 80 (Nginx)
-  db:
-    image: postgres:15
+      db:
+        condition: service_healthy
     environment:
-      POSTGRES_DB: pokimages
-      POSTGRES_USER: ia
-      POSTGRES_PASSWORD: foufafou
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/pokemontcg
+      - SPRING_DATASOURCE_USERNAME=ia
+      - SPRING_DATASOURCE_PASSWORD=foufafou
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - SPRING_JPA_SHOW_SQL=true
+    volumes:
+      - images-data:/app/images  # Monte un volume pour persister les images
+  frontend:
+    build: ./src/main/frontend
     ports:
-      - "5432:5432"
+      - "8082:80"
+  db:
+    image: postgres:latest
+    environment:
+      - POSTGRES_DB=pokemontcg
+      - POSTGRES_USER=ia
+      - POSTGRES_PASSWORD=foufafou
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ia -d pokemontcg"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+volumes:
+  postgres-data:
+  images-data:  # Volume pour les images
