--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=pokimages
 server.port=8081
-spring.datasource.url=jdbc:postgresql://db:5432/pokimages
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/pokemontcg
 spring.datasource.username=ia
 spring.datasource.password=foufafou
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
